# cranfield-computationMethods-lab2

./: CMakeLists.txt  README.md
src/: LinearAdvection.cpp  LinearAdvection.h  Scheme.cpp  Scheme.h  SchemeType.h  Solution.cpp  Solution.h  aliases.h  main.cpp  utilities.cpp  utilities.h
